# LLM_Study

./: .gitignore  PRJ01_W1_001_Python_Clean_Code.ipynb  PRJ01_W1_002_OpenAI_Chat_Completion.ipynb  PRJ01_W1_003_Langchain_Components.ipynb  PRJ01_W1_004_LCEL.ipynb  PRJ01_W1_005_Gradio_Chatbot.ipynb  PRJ01_W2_001_Tokenizing_Embedding.ipynb  PRJ01_W2_002_Simple_RAG_Pipeline.ipynb  PRJ01_W2_003_Document_Loader.ipynb  main.py  pyproject.toml
