[project]
name = "faq-bot-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "gradio>=5.29.1",
    "kiwipiepy>=0.21.0",
    "langchain-community>=0.3.24",
    "langchain-huggingface>=0.2.0",
]
